feat: added swagger documentation for GetUserByID and CreateUser, added new structure for common response
