# internal/controller/responses.go
@@ -3,3 +3,7 @@ package controller
 type CommonError struct {
 	Error string `json:"error"`
 }
+
+type CommonResponse struct {
+	Message string `json:"message"`
+}
